2000-07-20  Jeffrey Stedfast  <fejj@helixcode.com>

	* filter-driver.c: Update to make "async".

2000-07-11  Dan Winship  <danw@helixcode.com>

	* filter-driver.c: Update for CamelFolder API changes

2000-07-09  Dan Winship  <danw@helixcode.com>

	* filter-xml.[ch]: add a "string" type

	* filtertype.xml, vfoldertypes.xml: Use type="string" rather than
	"folder" for subject/body matching.

	* filter-arg-types.c: Update some strings for "text" input. Fix
	some warnings (including one that pointed out a real bug).

	* filter-arg.c, filter-druid.c, filter-format.c: fix warnings

2000-07-07  Dan Winship  <danw@helixcode.com>

	* filter-driver.c: Update for camel_folder_search_by_expression
	change (GList -> GPtrArray).

	* vfoldertypes.xml: sync this to filtertypes.xml (to/cc thing)

2000-07-05  Dan Winship  <danw@helixcode.com>

	* remove some non-error case debugging messages.

	* filtertypes.xml: Fix typos and update the "to-address" rule to
	match To or Cc.
	* vfoldertypes.xml: Fix typos.

	* filter-driver.c (do_delete, do_copy, do_stop,
	filter_driver_run): Add uids to the "processed" list only after
	succesfully doing something with them. Fixes the problem where
	copying a message to a folder that didn't exist would result in it
	disapearing.

2000-07-02  Ettore Perazzoli  <ettore@helixcode.com>

	* filter-driver.c (filter_driver_new): Don't free the ruleset nor
	the xmlDoc.  This will make us leak [I think], but at least
	filters work.

2000-07-02  Dan Winship  <danw@helixcode.com>

	* filter-driver.c (open_folder): freeze the folder to avoid
	multiple folder_changed's
	(close_folder): and thaw it.
	
2000-07-02  Dan Winship  <danw@helixcode.com>

	* filter-driver.c (filter_driver_new): kill
	filter_driver_set_session and filter_driver_set_rules and instead
	make filter_driver_new take the rules and a callback function it
	can use to turn URIs into folders.
	(open_folder): Use the callback function rather than calling camel